--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -186,13 +186,12 @@ body {
 @import "./styles/_3our-products";
 // store section	styles
 @import "./styles/_4store";
-// drone views styles
-@import "./styles/_5drone-view";
-// shop styles
-@import "./styles/_6shop";
+// drone views styles - shop styles
+@import "./styles/_5drone-view-n-shop";
+
 // buyers guide styles
-@import "./styles/_7buyers-guide";
+@import "./styles/_6buyers-guide";
 // magazines styles
-@import "./styles/_8magazine";
+@import "./styles/_7magazine";
 // footer styles
 @import "./styles/_footer";
