--- a/scss/styles/_6buyers-guide.scss
+++ b/scss/styles/_6buyers-guide.scss
@@ -1,1 +1,137 @@
 /*styles for buyers-guide section*/
+
+.buyers-guide {
+	display: grid;
+	grid-template-rows: min-content 1fr min-content;
+	row-gap: 20px;
+	// grid-template-columns: 1fr 1fr;
+
+	// .buyers-guide__description
+
+	&__description {
+		// grid-column: span 2;
+		display: grid;
+		grid-template-rows: min-content min-content min-content;
+		@include adaptive-property("grid-template-columns", 600, 400, 1);
+		// grid-template-columns: 50%;
+		row-gap: 7px;
+		// grid-template-columns: min-content 1fr;
+	}
+
+	// .buyers-guide__subtitle
+
+	&__subtitle {
+		// grid-column: 1 2;
+		// grid-row: 1 2;
+	}
+
+	// .buyers-guide__title
+
+	&__title {
+		// grid-column: 1 2;
+		// grid-row: 2 3;
+	}
+
+	// .buyers-guide__txt
+
+	&__txt {
+		// grid-column: 1 2;
+		// grid-row: 3 4;
+	}
+
+	// .buyers-guide__offer
+
+	&__offer {
+	}
+
+	// .buyers-guide__link
+
+	&__link {
+		display: inline-block;
+		// grid-column: span 2;
+	}
+}
+
+.offer {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	// by default the column-gap: 32px;
+	// do it by adaptive
+	@include adaptive-property("column-gap", 32, 10, 1);
+
+	// .offer__item
+
+	&__item {
+		display: grid;
+		grid-template-rows: min-content min-content min-content;
+		row-gap: 12px;
+	}
+
+	// .offer__img
+
+	&__img {
+		@include adaptive-property("width", 568, 150, 1);
+	}
+
+	// .offer__txt
+
+	&__txt {
+		font-size: 20px;
+		line-height: 1.2;
+		color: #575445;
+	}
+
+	// .offer__target
+
+	&__target {
+		display: grid;
+		grid-template-rows: min-content min-content;
+		grid-template-columns: 0.1fr 0.3fr 1fr;
+		column-gap: 5px;
+	}
+
+	// .offer__subimage
+
+	&__subimage {
+		grid-row: span 2;
+		grid-column: 1;
+		// order: -1;
+	}
+
+	// .offer__person
+
+	&__person {
+		// order: 2;
+		grid-column: 2;
+		font-family: "Roboto";
+		font-size: 13px;
+		line-height: 1.4;
+		color: #575445;
+		margin-bottom: -10px;
+	}
+
+	// .offer__job-title
+
+	&__job-title {
+		grid-column: 2;
+		// grid-row: 2 3;
+		// order: 0;
+		font-size: 11px;
+		line-height: 1.4;
+
+		color: #e6b939;
+	}
+
+	// .offer__date
+
+	&__date {
+		// order: 5;
+		// grid-row: 0; 
+		grid-column: 3;
+		font-size: 13px;
+		line-height: 1.4;
+		color: #6f7278;
+		text-align: end;
+		margin-top: -5px;
+	}
+}
