--- a/scss/styles/_6buyers-guide.scss
+++ b/scss/styles/_6buyers-guide.scss
@@ -4,6 +4,7 @@
 	display: grid;
 	grid-template-rows: min-content 1fr min-content;
 	row-gap: 20px;
+	margin-bottom: 200px;
 	// grid-template-columns: 1fr 1fr;
 
 	// .buyers-guide__description
@@ -48,7 +49,11 @@
 
 	&__link {
 		display: inline-block;
+		margin: 0 auto;
 		// grid-column: span 2;
+	}
+	&__link svg {
+		margin-left: 4px;
 	}
 }
 
@@ -102,19 +107,20 @@
 
 	&__person {
 		// order: 2;
+		// grid-row: 2;
 		grid-column: 2;
 		font-family: "Roboto";
 		font-size: 13px;
 		line-height: 1.4;
 		color: #575445;
-		margin-bottom: -10px;
+		transform: translateY(10px);
 	}
 
 	// .offer__job-title
 
 	&__job-title {
 		grid-column: 2;
-		// grid-row: 2 3;
+		// grid-row: 3;
 		// order: 0;
 		font-size: 11px;
 		line-height: 1.4;
@@ -126,12 +132,12 @@
 
 	&__date {
 		// order: 5;
-		// grid-row: 0; 
+		// grid-row: 2;
 		grid-column: 3;
 		font-size: 13px;
 		line-height: 1.4;
 		color: #6f7278;
 		text-align: end;
-		margin-top: -5px;
+		transform: translateY(-5px);
 	}
 }
