--- a/scss/styles/_6buyers-guide.scss
+++ b/scss/styles/_6buyers-guide.scss
@@ -4,7 +4,7 @@
 	display: grid;
 	grid-template-rows: min-content 1fr min-content;
 	row-gap: 20px;
-	margin-bottom: 200px;
+	margin: 100px auto 200px;
 	// grid-template-columns: 1fr 1fr;
 
 	// .buyers-guide__description
@@ -14,6 +14,7 @@
 		display: grid;
 		grid-template-rows: min-content min-content min-content;
 		@include adaptive-property("grid-template-columns", 600, 400, 1);
+		
 		// grid-template-columns: 50%;
 		row-gap: 7px;
 		// grid-template-columns: min-content 1fr;
