--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: "Poppins", sans-serif;
   max-width: 1440px;
+  font-size: 16px;
   font-size: calc(12px + 4 * ((100vw - 320px) / 1120));
   font-size: 16px;
   margin: 0 auto;
@@ -114,12 +115,15 @@ body {
 }
 
 .wrapper {
+  max-width: 1440px;
   max-width: calc(320px + 1120 * ((100vw - 320px) / 1120));
 }
 
 .container {
-  padding-left: calc(30px + 106 * ((100vw - 320px) / 1120));
-  padding-right: calc(30px + 106 * ((100vw - 320px) / 1120));
+  padding-left: 136px;
+  padding-left: calc(0px + 136 * ((100vw - 320px) / 1120));
+  padding-right: 136px;
+  padding-right: calc(0px + 136 * ((100vw - 320px) / 1120));
   margin: 0 auto;
 }
 
@@ -150,6 +154,7 @@ body {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  gap: 40px;
   gap: calc(10px + 30 * ((100vw - 320px) / 1120));
   margin: 17px 0;
 }
@@ -160,20 +165,25 @@ body {
 }
 
 .header--logo svg {
+  width: 128px;
   width: calc(100px + 28 * ((100vw - 320px) / 1120));
 }
 
 .header--menu {
   flex-grow: 1;
   flex-shrink: 1;
+  flex-basis: 460px;
   flex-basis: calc(300px + 160 * ((100vw - 320px) / 1120));
 }
 
 .header--cart-menu {
   flex-grow: 0;
   flex-shrink: 0;
+  flex-basis: 288px;
   flex-basis: calc(150px + 138 * ((100vw - 320px) / 1120));
   display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
   -moz-column-gap: calc(10px + 10 * ((100vw - 320px) / 1120));
        column-gap: calc(10px + 10 * ((100vw - 320px) / 1120));
   justify-content: flex-end;
@@ -183,6 +193,8 @@ body {
   display: flex;
   justify-content: flex-end;
   justify-content: end;
+  -moz-column-gap: 28px;
+       column-gap: 28px;
   -moz-column-gap: calc(10px + 18 * ((100vw - 320px) / 1120));
        column-gap: calc(10px + 18 * ((100vw - 320px) / 1120));
 }
@@ -205,18 +217,16 @@ body {
   gap: 8px;
 }
 .cart-menu__cart-btn::before {
-  content: "";
+  content: url("/images/header/cart-icon.svg");
   width: 17px;
   height: 17px;
-  background-image: url("/images/header/cart-icon.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
 .cart-menu__cart-btn::after {
-  content: "";
+  content: url("/images/0header/items-in-cart.svg");
   width: 20px;
   height: 20px;
-  background-image: url("/images/0header/items-in-cart.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -226,11 +236,17 @@ body {
   color: #ffffff;
   background-color: #575445;
   border-radius: 6px;
+  font-size: 16px;
   font-size: calc(12px + 4 * ((100vw - 320px) / 1120));
+  padding-top: 10px;
   padding-top: calc(5px + 5 * ((100vw - 320px) / 1120));
+  padding-bottom: 10px;
   padding-bottom: calc(5px + 5 * ((100vw - 320px) / 1120));
+  padding-left: 18px;
   padding-left: calc(5px + 13 * ((100vw - 320px) / 1120));
+  padding-right: 18px;
   padding-right: calc(5px + 13 * ((100vw - 320px) / 1120));
+  line-height: 1.4px;
   line-height: calc(1.1px + 0.3 * ((100vw - 320px) / 1120));
 }
 
@@ -375,11 +391,13 @@ body {
 
 /*styles for store section*/
 .image-bg {
-  max-width: 100%;
+  width: 379px;
+  width: calc(50px + 329 * ((100vw - 320px) / 1120));
 }
 
 .image-bg img {
-  width: 100%;
+  width: 379px;
+  width: calc(110px + 269 * ((100vw - 320px) / 1120));
   border-radius: 12px;
 }
 
@@ -409,10 +427,14 @@ body {
 .goods-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 15px;
+  gap: calc(5px + 10 * ((100vw - 320px) / 1120));
 }
 .goods-list__item {
-  flex: 0 1 32.3%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 379px;
+  flex-basis: calc(90px + 289 * ((100vw - 320px) / 1120));
   position: relative;
 }
 .goods-list__description {
@@ -424,7 +446,10 @@ body {
   position: absolute;
   top: 40px;
   text-align: center;
-  padding: 0 63px;
+  padding-left: 63px;
+  padding-left: calc(0px + 63 * ((100vw - 320px) / 1120));
+  padding-right: 63px;
+  padding-right: calc(0px + 63 * ((100vw - 320px) / 1120));
 }
 .goods-list__title {
   font-family: "Roboto";
@@ -511,19 +536,23 @@ body {
 /*styles for shop section*/
 .shop {
   background: #375c58 center url("./../../images/6shop-section/pattern-bg.svg") repeat;
+  padding-top: 100px;
   padding-top: calc(10px + 90 * ((100vw - 320px) / 1120));
+  padding-bottom: 100px;
   padding-bottom: calc(10px + 90 * ((100vw - 320px) / 1120));
 }
 .shop__description {
   margin: 0 auto;
   text-align: center;
   max-width: 600px;
+  width: 600px;
   width: calc(200px + 400 * ((100vw - 320px) / 1120));
 }
 .shop__subtitle {
   font-size: 14px;
   line-height: 1.4;
   color: #fafafc;
+  font-size: 14px;
   font-size: calc(9px + 5 * ((100vw - 320px) / 1120));
 }
 .shop__title {
@@ -531,16 +560,21 @@ body {
   line-height: 1.2;
   color: #e6b939;
   font-family: "Roboto";
+  font-size: 36px;
   font-size: calc(16px + 20 * ((100vw - 320px) / 1120));
 }
 .shop__txt {
   color: #fafafc;
+  font-size: 16px;
   font-size: calc(10px + 6 * ((100vw - 320px) / 1120));
 }
 .shop__link {
   display: inline-block;
+  margin-top: 20px;
   margin-top: calc(10px + 10 * ((100vw - 320px) / 1120));
+  padding: 10px;
   padding: calc(5px + 5 * ((100vw - 320px) / 1120));
+  font-size: 15px;
   font-size: calc(9px + 6 * ((100vw - 320px) / 1120));
   line-height: 1.49;
   text-align: center;
@@ -561,6 +595,7 @@ body {
   display: grid;
   grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content min-content;
+  grid-template-columns: 600px;
   grid-template-columns: calc(400px + 200 * ((100vw - 320px) / 1120));
   row-gap: 7px;
 }
@@ -574,7 +609,10 @@ body {
 
 .offer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: -webkit-min-content -webkit-min-content;
+  grid-template-columns: min-content min-content;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
   -moz-column-gap: calc(10px + 22 * ((100vw - 320px) / 1120));
        column-gap: calc(10px + 22 * ((100vw - 320px) / 1120));
 }
@@ -582,9 +620,12 @@ body {
   display: grid;
   grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content min-content;
+  grid-template-columns: -webkit-min-content;
+  grid-template-columns: min-content;
   row-gap: 12px;
 }
-.offer__img {
+.offer__img img {
+  width: 568px;
   width: calc(150px + 418 * ((100vw - 320px) / 1120));
 }
 .offer__txt {
@@ -596,7 +637,7 @@ body {
   display: grid;
   grid-template-rows: -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content;
-  grid-template-columns: 0.1fr 0.3fr 1fr;
+  grid-template-columns: 0.1fr 0.2fr 0.7fr;
   -moz-column-gap: 5px;
        column-gap: 5px;
 }
@@ -635,6 +676,8 @@ body {
   justify-content: start;
   -moz-column-gap: 104px;
        column-gap: 104px;
+  -moz-column-gap: calc(30px + 74 * ((100vw - 320px) / 1120));
+       column-gap: calc(30px + 74 * ((100vw - 320px) / 1120));
 }
 .magazine__img {
   position: relative;
@@ -645,6 +688,10 @@ body {
   right: -125px;
   z-index: -1;
 }
+.magazine__img--main {
+  width: 576px;
+  width: calc(300px + 276 * ((100vw - 320px) / 1120));
+}
 .magazine__img-bl {
   position: absolute;
   bottom: -127px;
@@ -653,7 +700,9 @@ body {
 /*styles for footer section*/
 .footer {
   background-color: #575445;
+  padding-top: 100px;
   padding-top: calc(15px + 85 * ((100vw - 320px) / 1120));
+  padding-bottom: 100px;
   padding-bottom: calc(15px + 85 * ((100vw - 320px) / 1120));
 }
 .footer__container {
@@ -661,6 +710,7 @@ body {
   grid-template-rows: -webkit-min-content -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content min-content 1fr min-content;
   grid-template-columns: 1fr 1fr;
+  row-gap: 31px;
   row-gap: calc(10px + 21 * ((100vw - 320px) / 1120));
 }
 .footer__logo {
