--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,10 +6,9 @@
 /* values for adaptive  property */
 //
 $maxWidth: 1440;
-$maxWidthContainer: 1168;
+$maxWidthContainer: 90.33vw;
 $screen-сoefficient: calc((100vw - 320px) / (1440 - 320));
 $padding-container: calc(50px + (136 - 50) * $screen-сoefficient);
-
 
 /* mixins definition*/
 
@@ -32,9 +31,20 @@ $padding-container: calc(50px + (136 - 50) * $screen-сoefficient);
 		}
 	} @else {
 		//  all other times
+		#{$property}: $originValue + px;
 		#{$property}: calc(#{$minValue + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
 	}
 }
+
+// @mixin adaptive($property, $maxValue, $minValue) {
+// 	$addSize: $maxValue - $minValue;
+// 	#{$property}: $originValue + px;
+
+// 	@media screen and (max-width > 1440px) {
+// 		#{$property}: calc(#{$minValue + px} + #{$addSize} * ((100vw - 1440px) / #{$maxWidth - 1440px}));
+// 	}
+// }
+// //
 
 /* styler fox titles, subtitles, txt */
 @mixin styler($fz, $lh, $cl) {
@@ -157,8 +167,8 @@ body {
 	// @include adaptive-property("max-width", 1440, 320, 1);
 	// @include adaptive-property("max-width", 1440, 320, 2);
 	// padding max - 136px, for example min 50px
-	@include adaptive-property("padding-left", 136, 30, 1);
-	@include adaptive-property("padding-right", 136, 30, 1);
+	@include adaptive-property("padding-left", 136, 0, 1);
+	@include adaptive-property("padding-right", 136, 0, 1);
 	margin: 0 auto;
 }
 
