--- a/scss/styles/_0header.scss
+++ b/scss/styles/_0header.scss
@@ -83,19 +83,19 @@
 	}
 
 	&__cart-btn::before {
-		content: url('/images/header/cart-icon.svg');
+		content: url('./images/header/cart-icon.svg');
 		width: 17px;
 		height: 17px;
-		background-size: contain;
-		background-repeat: no-repeat;
+		// background-size: contain;
+		// background-repeat: no-repeat;
 	}
 
 	&__cart-btn::after {
-		content: url("/images/0header/items-in-cart.svg");
+		content: url("./images/0header/items-in-cart.svg");
 		width: 20px;
 		height: 20px;
-		background-size: contain;
-		background-repeat: no-repeat;
+		// background-size: contain;
+		// background-repeat: no-repeat;
 	}
 
 	&__purchase-btn,
