--- a/scss/styles/_6buyers-guide.scss
+++ b/scss/styles/_6buyers-guide.scss
@@ -13,7 +13,8 @@
 		// grid-column: span 2;
 		display: grid;
 		grid-template-rows: min-content min-content min-content;
-		@include adaptive-property("grid-template-columns", 600, 400, 1);
+		grid-template-columns: minmax(400px, 600px);
+		// @include adaptive-property("grid-template-columns", 600, 400, 1);
 
 		// grid-template-columns: 50%;
 		row-gap: 7px;
@@ -60,7 +61,7 @@
 
 .offer {
 	display: grid;
-	grid-template-columns: min-content min-content;
+	grid-template-columns: minmax(300px, 0.5fr) minmax(300px, 0.5fr);
 	// column-gap: 32px;
 	@include adaptive-property("column-gap", 32, 10, 1);
 		// @include adaptive-property("grid-template-column", , 10, 1);
@@ -73,7 +74,7 @@
 	&__item {
 		display: grid;
 		grid-template-rows: min-content min-content min-content;
-		grid-template-columns: min-content;
+		// grid-template-columns: min-content;
 		row-gap: 12px;
 	}
 
@@ -85,7 +86,8 @@
 		// max-width: 568px;
 	}
 	&__img img {
-		@include adaptive-property("width", 568, 150, 1);
+		width: 100%;
+		// @include adaptive-property("width", 568, 150, 1);
 	}
 	// .offer__txt
 
